syntax = "proto3";
import "DTO/time_slot.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Requests.TimeSlots";

message GetTimeSlotByIdRequestProto {
  string time_slot_id = 1;
  TraceDataProto traceData = 2;
}

message GetTimeSlotsForWorkDayIdRequestProto {
  string work_day_id = 1;
  TraceDataProto traceData = 2;
}

message TimeSlotListProto {
  repeated TimeSlotProto time_slots = 1;
}

service TimeSlotRequestService {
  rpc GetTimeSlotById(GetTimeSlotByIdRequestProto) returns (TimeSlotProto);
  rpc GetTimeSlotsForWorkDayId(GetTimeSlotsForWorkDayIdRequestProto) returns (TimeSlotListProto);
}
